fixed bug related to URL config option and commandline interface